--- a/localisation/ENG_england_1_l_english.yml
+++ b/localisation/ENG_england_1_l_english.yml
@@ -29,13 +29,13 @@ ENG_continue_protestantism:0 "Continue Protestantism"
 ENG_continue_protestantism_desc:0 "The Pope has wronged us too many times, and we cannot allow his mistakes to continue. Hierarchy in religion is wrong."
 ENG_careful_middle_ground:0 "Careful Middle Ground"
 ENG_careful_middle_ground_desc:0 "We should back-pedal in some places, so we can be more religiously tolerant. Maybe Protestants and Catholics can live together without the state promoting one or the other?"
-ENG_civilian_production_i:0 "Civilian Production I"
-ENG_civilian_production_i_desc:0 "We need to be able to provide for ourselves before we strike out against the world"
-ENG_civilian_production_ii:0 "Civilian Production II"
-ENG_civilian_production_ii_desc:0 "We should continue to improve the productive capabilities of our workers."
-ENG_civilian_production_iii:0 "Civilian Production III"
-ENG_civilian_production_iii_desc:0 "We've made great strides with our industry, though there is still room for improvement."
-ENG_civilian_production_iv:0 "Civilian Production IV"
+ENG_civilian_production_i:0 "Expand Farming"
+ENG_civilian_production_i_desc:0 "We need to prioritize producing food for our people, industry will help with that."
+ENG_civilian_production_ii:0 "Wool Production"
+ENG_civilian_production_ii_desc:0 "Wool might be a useful resource to look into and produce."
+ENG_civilian_production_iii:0 "Increase Wool Exports"
+ENG_civilian_production_iii_desc:0 "Wool is popular on the continent, we should increase exports of it so we may further improve our industry."
+ENG_civilian_production_iv:0 "General Industry Improvement"
 ENG_civilian_production_iv_desc:0 "Let our industrial might continue forevermore, for the glory of England!"
 ENG_improve_england:0 "Improve England"
 ENG_improve_england_desc:0 "Time to improve our Country!"
@@ -90,7 +90,7 @@ ENG_invest_into_russia_desc:0 "Russia is a fairly poor nation for its size. We s
 ENG_ponder_foreign_investments:0 "Ponder Foreign Investments"
 ENG_ponder_foreign_investments_desc:0 "There is only so much we can do on our small island, industry-wise and economically. We should invest in other nations so that we may both benefit."
 ENG_increase_agricultural_output:0 "Increase Agricultural Output"
-ENG_increase_agricultural_output_desc:0 "We should try to produce more food, since our land is small, but densely populated."
+ENG_increase_agricultural_output_desc:0 "We must learn from the mistakes of the Famine, and increase our food output so that we will not starve again."
 ENG_invest_into_spain:0 "Invest into Spain"
 ENG_invest_into_spain_desc:0 "We should pursue closer ties with Spain, a fairly rich nation with extensive colonies in the Americas"
 ENG_invest_into_austria:0 "Invest into Austria"
@@ -273,4 +273,5 @@ ENG_naval_superpower:0 "Naval Superpower"
 ENG_naval_superpower_desc:0 "We have proven ourselves a naval superpower. We are now not only able to roam the sea, but rule it, and maybe more of the world than we thought possible."
 ENG_further_industrialize_africa:0 "Further Industrialize Africa"
 ENG_further_industrialize_africa_desc:0 "We should still pump more industry into Africa, so that we may get more from them."
-
+ENG_free_speech:0 "Free Speech"
+ENG_free_speech_desc:0 "We must encourage free speak, so hopefully people will speak more favorably of us."
