Oh my god Spain

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -60,6 +60,10 @@
  LAT_DEF:0 "Latvia"
  LAT_ADJ:0 "Latvian"
  
+ SPR:0 "Spain"
+ SPR_DEF:0 "Spain"
+ SPR_ADJ:0 "Spanish"
+ 
  ITA:0 "Italy"
  ITA_DEF:0 "Italy"
  ITA_ADJ:0 "Italian"
@@ -3326,3 +3330,19 @@ SMI_fascism:0 "Sapmi"
  MIK:0 "Mikhlaf"
  MIK_DEF:0 "Mikhlaf"
  MIK_ADJ:0 "Mikhlaf"
+ 
+ TUR_fascism:1 "Ottoman Empire"
+ TUR_fascism_DEF:1 "Ottomans"
+ TUR_democratic:1 "Ottoman Empire"
+ TUR_democratic_DEF:1 "Ottomans"
+ TUR_neutrality:0 "Ottoman Empire"
+ TUR_neutrality_DEF:0 "Ottomans"
+ TUR_communism:1 "Ottoman Empire"
+ TUR_communism_DEF:1 "Ottomans"
+ TUR_fascism_ADJ:0 "Ottoman"
+ TUR_democratic_ADJ:0 "Ottoman"
+ TUR_neutrality_ADJ:0 "Ottoman"
+ TUR_communism_ADJ:0 "Ottoman"
+ TUR:0 "Ottoman Empire"
+ TUR_DEF:0 "Ottomans"
+ TUR_ADJ:0 "Ottoman"
